--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6513065360359908"
      crossorigin="anonymous"></script>
+		<script type='text/javascript' src='//pl26759708.profitableratecpm.com/ce/1e/8c/ce1e8cebfbf1e434f7be985cd7eabdcf.js'></script>
 	</head>
 	<body class="is-preload">
 
